Bug 1586043 - Gracefully handle IPC failure when checking if MediaKeySystemAccess is allowed on Windows. r=dminor

Because it's possible to have the IPC fail when checking if MediaKeySystemAccess
should be allowed, we should gracefully handle the IPC failure case. If we don't
gracefully handle here, closing the tab during requestMediaKeySystemAccess can
result in crashing the content process.

Differential Revision: https://phabricator.services.mozilla.com/D48116

--HG--
extra : moz-landing-system : lando